<resources>
    <string name="app_name">Google Account</string>
    <string name="creat_your_google_account">Creat Your Google Account</string>
    <string name="todo">TODO</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="you_can_use_letters_numbers_periods"><![CDATA[You can use letters , numbers & periods]]></string>
    <string name="user_name">User Name</string>
    <string name="use_my_current_email_address_insted">Use my current email address insted</string>
    <string name="password">Password</string>
    <string name="confirm">Confirm</string>
    <string name="use_8_or_more_characters_with_a_mix_od_letters_numbers_symbols"><![CDATA[Use 8 or more characters with a mix od letters , numbers & symbols]]></string>
    <string name="show_password">Show password</string>
    <string name="next">Next</string>
    <string name="sign_in_instead">Sign in instead</string>
</resources>